# Files

./: CA-WINDOWS-Age-of-Empires-2-Definitive-Edition_archive.torrent  Oscyra  Program.cs  RUN-ME.sh  Windows-7 Installation_2025  ncs  oscyra-installer  oscyra-session.sh
BACKUP/: Oscyra  boot.html  cs.cs  cs.designer.cs  demo.html  desktop.html  desktop.ini  kde_settings.conf  login.html  oscyra-installer  oscyra-session.desktop  oscyra-session.sh  python.python  rename
BACKUP/Dynamic-OS-master/: CMakeLists.txt
BACKUP/Dynamic-OS-master/Function/: Functions.cpp
BACKUP/Dynamic-OS-master/Function/Button/: FunctionControl.h
BACKUP/Dynamic-OS-master/Function/Button/Apps/: Apps.cpp  Apps.h
BACKUP/Dynamic-OS-master/Function/Button/Apps/Manageapp/: ManageFunctionApp.cpp  ManageFunctionApp.h
BACKUP/Dynamic-OS-master/Function/Button/Home/: Home.cpp  Home.h
BACKUP/Dynamic-OS-master/Root/: main.cpp
BACKUP/Dynamic-OS-master/UI/: MainWindow.cpp  MainWindow.h  TaskbarWidget.cpp  TaskbarWidget.h  UIEffects.cpp  UIEffects.h
BACKUP/Dynamic-OS-master/UI/Button/: MainControl.cpp  MainControl.h  OrbSidebarButton.cpp  OrbSidebarButton.h
BACKUP/Dynamic-OS-master/UI/Button/Apps/: Apps.cpp  Apps.h
BACKUP/Dynamic-OS-master/UI/Button/Apps/Manageapp/: Manageapp.cpp  Manageapp.h
BACKUP/Dynamic-OS-master/UI/Button/Apps/Manageapp/Content/Addapp/: AddApp.cpp  AddApp.h
BACKUP/Dynamic-OS-master/UI/Button/Apps/Manageapp/Content/Manageapp/: ManageAppPage.cpp  ManageAppPage.h
BACKUP/Dynamic-OS-master/UI/Button/Apps/Manageapp/Content/uninstallapp/: UninstallApp.cpp  UninstallApp.h
BACKUP/Dynamic-OS-master/UI/Button/Built-In Apps/: Built-In Apps.cpp  Built-In Apps.h
BACKUP/Dynamic-OS-master/UI/Button/Built-In Apps/Apps/: CustomAppWindow.cpp  CustomAppWindow.h  FullScreenWindow.cpp  FullScreenWindow.h  WebBrowser.cpp  WebBrowser.h
BACKUP/Dynamic-OS-master/UI/Button/Dashboard/: Dashboard.cpp  Dashboard.h
BACKUP/Dynamic-OS-master/UI/Button/File Manager/: File Manager.cpp  File Manager.h
BACKUP/Dynamic-OS-master/UI/Button/Home/: Home.cpp  Home.h  orb.cpp  orb.h
BACKUP/Dynamic-OS-master/UI/Button/Network/: Network.cpp  Network.h
BACKUP/Dynamic-OS-master/UI/Button/Power Options/: Power Options.cpp  Power Options.h
BACKUP/Dynamic-OS-master/UI/Button/Settings/: Settings.cpp  Settings.h
BACKUP/Dynamic-OS-master/UI/Button/Settings/Buttons/: KeyboardSettings.cpp  KeyboardSettings.h  MouseSettings.cpp  MouseSettings.h  SystemSettings.cpp  SystemSettings.h  UpdateSettings.cpp  UpdateSettings.h  performance.cpp  performance.h  storage.cpp  storage.h
BACKUP/Dynamic-OS-master/UI/Button/Task Manager/: Task Manager.cpp  Task Manager.h
BACKUP/OSCYRA-INSTALL/: CMakeCache.txt  CMakeLists.txt  Makefile  background_widget.cpp  background_widget.h  cmake_install.cmake  installerlogic.cpp  installerlogic.h  main.cpp  mainwindow.cpp  mainwindow.h  oscyra-installer
BACKUP/OSCYRA-INSTALL/pages/: disk_page.cpp  disk_page.h  finish_page.cpp  finish_page.h  install_page.cpp  install_page.h  keyboard_page.cpp  keyboard_page.h  user_page.cpp  user_page.h  welcome_page.cpp  welcome_page.h
BACKUP/release/: login.html  secret.html  systemlock.deps.json
BACKUP/test1/: RUN-ME.sh  RUN-PLYMOUTH.sh  chrootme.sh  config.sh  copy.sh  desktop.ini  oscyra-session.desktop  oscyra-session.sh  oscyra-start.sh  oscyra.txt  run.sh  setup.txt
BACKUP/test1/New/: RUN-ME.sh  oscyra-session.sh
BACKUP/test1/plymouth/: oscyra.plymouth  script
Dynamic.OS/: logo.py
HACOS/: HACOS - RoadMap.txt
HACOS/OS/: Makefile  efi.h  efilib.h  linker.ld  main.c  packages
NCS/: BackendBridge.cpp  BackendBridge.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  ncs
NCS/backend/: network_monitor.py
NCS/gui/: app.js  index.html  mode.html  style.css
Oscyra.solutions/: logo.py
kernel/: MODIFIED
project.aion/: logo.py
